feat: highlight code
too simple, need to redo later

--- a/index.html
+++ b/index.html
@@ -5,8 +5,12 @@
         <title>AI Toolbox</title>
 
         <link rel="stylesheet" href="/tailwind.css"/>
+        <link rel="stylesheet" href="/hl.min.css"/>
+        <link data-trunk rel="copy-file" href="hl.min.css"/>
+        <link data-trunk rel="copy-file" href="highlight.min.js"/>
 
     </head>
     <body>
+        <script src="/highlight.min.js"></script>
     </body>
 </html>
